chore: Warnings de Mockito silenciados